changed alot of the styles fixed bug with the project spacing and fixed the contact layout

--- a/style_weather.css
+++ b/style_weather.css
@@ -128,19 +128,16 @@ nav li a.active {
     border-radius: 20px;
 }
 
-
 #bg-video {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100vh;
     transform: translate(-50%, -50%);
     background-size: cover;
+    object-fit: fill;
 }
-
 
 .video-background {
     position: fixed;
