--- a/stylesnakegame.css
+++ b/stylesnakegame.css
@@ -119,17 +119,15 @@ nav li a.active {
 }
 
 #bg-video {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100vh;
     transform: translate(-50%, -50%);
     background-size: cover;
+    object-fit: fill;
 }
-
 
 
 .zen {
